syntax = "proto3";
package assertionclassifier;

option java_package = "edu.uw.bhi.bionlp.covid.parser.assertionclassifier";

service AssertionClassifier {
    rpc DetectSentences (SentenceDetectionInput) returns (SentenceDetectionOutput) {}
    rpc PredictAssertion (AssertionClassifierInput) returns (AssertionClassifierOutput) {}
}

/*
 * Sentence
 */
message Sentence {
    int32 id = 1;
    int32 begin_char_index = 2;
    int32 end_char_index = 3;
    string text = 4;
}

message SentenceDetectionInput {
    string text = 1;
}

message SentenceDetectionOutput {
    repeated Sentence sentences = 1;
}

/*
 * Assertion Classifier
 */
message AssertionClassifierInput {
    string text = 1;
    int32 start_index = 2;
    int32 end_index = 3;
}

message AssertionClassifierOutput {
    string prediction = 1;
}